--- a/lesson/templates/materials/all_materials.html
+++ b/lesson/templates/materials/all_materials.html
@@ -4,7 +4,12 @@
 {% block content %}
     <h1>My materials list</h1>
     {% for material in materials %}
-        <h2>{{ material.title }}</h2>
+        <h2>
+            <a href="{{ material.get_absolute_url }}">
+                {{ material.title }}
+            </a>
+
+        </h2>
         <p>
             Material published {{material.publish}} by {{material.author}}
         </p>
